feat(products): complete product lifecycle with images, soft delete and filtering